--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 TWILIO_AUTH_TOKEN=your_auth_token
+GROQ_API_KEY=gskXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
