--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 twilio==9.3.2
 python-dotenv==1.0.1
 Flask==3.0.3
-groq==0.11.0
+langchain==0.3.7
+langchain-groq==0.2.1
+langchain-community==0.3.7
+langchain-huggingface==0.1.2
+tqdm==4.67.0
+faiss-cpu==1.9.0.post1
